--- a/PA1_template.html
+++ b/PA1_template.html
@@ -372,6 +372,17 @@ $(document).ready(function () {
 
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#loading-and-preprocessing-the-data">1. Loading and preprocessing the data</a></li>
+<li><a href="#what-is-mean-total-number-of-steps-taken-per-day">2. What is mean total number of steps taken per day?</a></li>
+<li><a href="#what-is-the-average-daily-activity-pattern">3. What is the average daily activity pattern?</a></li>
+<li><a href="#imputing-missing-values">4. Imputing missing values</a><ul>
+<li><a href="#histogram-of-the-total-number-of-steps-taken-each-day-after-removing-nas">4.4 Histogram of the total number of steps taken each day after removing NA’s</a></li>
+</ul></li>
+<li><a href="#are-there-differences-in-activity-patterns-between-weekdays-and-weekends">5. Are there differences in activity patterns between weekdays and weekends?</a></li>
+</ul>
+</div>
 
 <div id="loading-and-preprocessing-the-data" class="section level2">
 <h2>1. Loading and preprocessing the data</h2>
